# on-chain-reputation-system

./: .gitignore  PRD.md  README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  config.js
client/src/components/: ActionPanel.jsx  EndorsePanel.jsx  Navbar.jsx  ReputationCard.jsx
client/src/pages/: Home.jsx
client/src/utils/: contract.js  freighter.js
contracts/: Cargo.toml
contracts/src/: lib.rs
